# stand-in-language

./: .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  LICENSE  Main.hs  Main.stlc.hs  Prelude.sil  Prelude.tel  README.md  SlimPrelude.sil  bench.sil  bench.tel  default.nix  examples.tel  flake.nix  flake.nix.backup  hello.sil  hello.tel  hie.yaml  main.hvm  minimal.tel  myshell.nix  runtime.ss  shell.nix  sil.cabal  stack.yaml  telomare.cabal  testchar.tel  tictactoe.sil  tictactoe.tel
.github/workflows/: telomare-ci.yml  test.yml
app/: Main.hs  MiniRepl.hs  Repl.hs  Sadness.hs
bench/: Cases.hs  LLVMDive.hs  MemoryBench.hs  SerializerBench.hs
bench/MemoryBench/: Cases.hs  LLVM.hs  LLVMDive.hs  cases
bench/cases/: funs
cbits/: Makefile  SIL.c  Telomare.c  jumper.c
cbits/include/: SIL.h  Telomare.h
ctest/: CMakeLists.txt  tests.cpp
hvm/: backend.hvm
src/: Debug.hs  Naturals.hs  PrettyPrint.hs  SIL.hs  Telomare.hs
src/SIL/: BadLLVM.hs  Eval.hs  Llvm.hs  Optimizer.hs  Parser.hs  ParserMegaparsec.hs  Possible.hs  Prisms.hs  RunTime.hs  Serializer.hs  TypeChecker.hs
src/SIL/Llvm/: CodeGen.hs
src/SIL/Serializer/: C.hs
src/Telomare/: Decompiler.hs  Eval.hs  Llvm.hs  Optimizer.hs  Parser.hs  Possible.hs  Resolver.hs  RunTime.hs  Serializer.hs  TypeChecker.hs
src/Telomare/Serializer/: C.hs
test/: CaseTests.hs  Common.hs  ParserTests.hs  ResolverTests.hs  SerializerSpec.hs  Spec.hs
