cabal-version:       >=1.10
name:                sil
version:             0.1.0.0
synopsis:            A simple but robust virtual machine
description:         Please see README.md
homepage:            https://github.com/sfultong/sil#readme
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Sam Griffin
maintainer:          sam.griffin@gmail.com
copyright:           2019 Sam Griffin
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

data-files:          bench/MemoryBench/cases

library
  exposed-modules:     PrettyPrint
                     , SIL
                     , Naturals
                     , SIL.Parser
                     , SIL.TypeChecker
                     , SIL.Serializer
                     , SIL.Optimizer
                     , SIL.Eval
                     , SIL.RunTime
                     , SIL.Llvm
                     , SIL.Serializer.C
  other-extensions:    PatternSynonyms
                     , ViewPatterns
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , LambdaCase
                     , StandaloneDeriving
                     , GADTs
                     , EmptyDataDecls
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , OverloadedStrings
                     , RecursiveDo
  build-depends:       base >=4.11 && <4.12
                     , containers >=0.5 && <0.6
                     , deepseq >=1.4 && <1.5
                     , mtl >=2.2 && <2.3
                     , recursion-schemes >=5.0 && <5.1
                     , binary >=0.8 && <0.9
                     , parsec >=3.1 && <3.2
                     , indents >=0.4 && <0.5
                     , vector >=0.12 && <0.13
                     , cryptohash-sha256 >=0.11 && <0.12
                     , bytestring >=0.10 && <0.11
                     , clock >=0.7 && <0.8
                     , base16-bytestring >=0.1 && <0.2
                     , llvm-hs-pure >=6.2 && <6.3
                     , llvm-hs >=6.3 && <6.4
                     , derive-storable >=0.1 && <0.2
  hs-source-dirs:      src
  include-dirs:        cbits/include
  c-sources:           cbits/SIL.c
  extra-libraries:     gc
                       jumper
  default-language:    Haskell2010

executable sil-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , sil
                     , strict
  default-language:    Haskell2010

executable sil-mini-repl
  hs-source-dirs:      app
  main-is:             MiniRepl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , sil
                     , haskeline
                     , parsec
                     , indents
                     , strict 
                     , optparse-applicative
  default-language:    Haskell2010

test-suite sil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
  build-depends:       base
                     , hspec
                     , sil
                     , strict
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite sil-serializer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             SerializerSpec.hs
  other-modules:       Common
  build-depends:       base
                     , sil
                     , strict
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark sil-serializer-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             SerializerBench.hs
  build-depends:       base, sil, deepseq, strict, vector, criterion
  ghc-options:         -with-rtsopts=-T


benchmark sil-memory-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             MemoryBench.hs
  other-modules:       MemoryBench.Cases
                     , MemoryBench.LLVM
                     , Paths_sil
  build-depends:       base, sil, deepseq, strict, weigh, parsec, mtl
                     , containers, bytestring ,llvm-hs-pure, llvm-hs

source-repository head
  type:     git
  location: https://github.com/sfultong/sil