name:                sil
version:             0.1.0.0
synopsis:            A simple but robust virtual machine
description:         Please see README.md
homepage:            https://github.com/sfultong/sil#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Sam Griffin
maintainer:          sam.griffin@gmail.com
copyright:           2019 Sam Griffin
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

data-files:          bench/MemoryBench/cases

library
  hs-source-dirs:      src
  include-dirs:        cbits/include
  c-sources:           cbits/SIL.c
  other-extensions:    GADTs
                     , EmptyDataDecls
                     , DeriveFunctor
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , OverloadedStrings
                     , RecursiveDo
  exposed-modules:     Naturals
                     , PrettyPrint
                     , SIL
                     , SIL.Eval
                     , SIL.Llvm
                     , SIL.Optimizer
                     , SIL.Parser
                     , SIL.RunTime
                     , SIL.TypeChecker
                     , SIL.Serializer
                     , SIL.Serializer.C
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , cryptohash-sha256
                     , recursion-schemes
                     , parsec
                     , indents
                     , clock
                     , containers
                     , mtl
                     , vector
                     , deepseq
                     , derive-storable
                     , derive-storable-plugin
                     , bytestring
                     , llvm-hs
                     , llvm-hs-pure
                     , text
                     , megaparsec
                     , strict
                     , tasty
                     , tasty-hunit
  extra-libraries:     gc
                     , jumper
  -- uncomment this line to get a cabal repl. Use appropiate complete path.
  -- extra-lib-dirs:      /home/hhefesto/src/stand-in-language/lib

  default-language:    Haskell2010
  
executable sil-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , sil
                     , strict
  default-language:    Haskell2010

executable sil-mini-repl
  hs-source-dirs:      app
  main-is:             MiniRepl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , sil
                     , haskeline
                     , parsec
                     , indents
                     , strict 
                     , optparse-applicative
  default-language:    Haskell2010

test-suite sil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
  build-depends:       base
                     , hspec
                     , sil
                     , strict
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite sil-serializer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             SerializerSpec.hs
  other-modules:       Common
  build-depends:       base
                     , sil
                     , strict
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark sil-serializer-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             SerializerBench.hs
  build-depends:       base, sil, deepseq, strict, vector, criterion
  ghc-options:         -with-rtsopts=-T


benchmark sil-memory-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             MemoryBench.hs
  other-modules:       MemoryBench.Cases
                     , MemoryBench.LLVM
                     , Paths_sil
  build-depends:       base, sil, deepseq, strict, weigh, parsec, mtl
                     , containers, bytestring ,llvm-hs-pure, llvm-hs

source-repository head
  type:     git
  location: https://github.com/sfultong/sil
