name:                telomare
version:             0.1.0.0
synopsis:            A simple but robust virtual machine
description:         Please see README.md
homepage:            https://github.com/Stand-In-Language/stand-in-language#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Sam Griffin
maintainer:          sam.griffin@gmail.com
copyright:           2019 Sam Griffin
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

data-files:          bench/MemoryBench/cases

library
  hs-source-dirs:      src
                     , test
  include-dirs:        cbits/include
  c-sources:           cbits/Telomare.c
  other-extensions:    GADTs
                     , EmptyDataDecls
                     , DeriveFunctor
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , OverloadedStrings
                     , RecursiveDo
  exposed-modules:     Naturals
                     , PrettyPrint
                     , Telomare
                     , Telomare.Eval
                     , Telomare.Llvm
                     , Telomare.Optimizer
                     , Telomare.Parser
                     , Telomare.RunTime
                     , Telomare.TypeChecker
                     , Telomare.Serializer
                     , Telomare.Serializer.C
                     , Common
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , cryptohash-sha256
                     , dlist
                     , recursion-schemes
                     , clock
                     , containers
                     , mtl
                     , vector
                     , deepseq
                     , derive-storable
                     , derive-storable-plugin
                     , bytestring
                     , llvm-hs
                     , llvm-hs-pure
                     , text
                     , megaparsec
                     , strict
                     , tasty
                     , tasty-hunit
                     , deriving-compat
                     , lens
                     , hspec
                     , QuickCheck

  extra-libraries:     gc
                     , jumper
  -- uncomment this line to get a cabal repl. Use appropiate complete path.
  extra-lib-dirs:      /home/hhefesto/src/telomare/lib

  default-language:    Haskell2010
  ghc-options:         -ddump-to-file -ddump-splices

executable telomare-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , telomare
                     , strict
  default-language:    Haskell2010

executable telomare-mini-repl
  hs-source-dirs:      app
  main-is:             MiniRepl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , telomare
                     , haskeline
                     , strict
                     , optparse-applicative
                     , megaparsec
                     , mtl
  default-language:    Haskell2010

test-suite telomare-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
  build-depends:       base
                     , hspec
		     , hspec-core
                     , telomare
                     , strict
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ParserTests.hs
  other-modules:       Common
  build-depends:       base
                     , telomare
                     , strict
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , containers
                     , megaparsec
                     , mtl
                     , recursion-schemes
                     , Diff
                     , pretty-show

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-serializer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             SerializerSpec.hs
  other-modules:       Common
  build-depends:       base
                     , telomare
                     , strict
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark telomare-serializer-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             SerializerBench.hs
  build-depends:       base, telomare, deepseq, strict, vector, criterion
  ghc-options:         -with-rtsopts=-T


benchmark telomare-memory-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             MemoryBench.hs
  other-modules:       MemoryBench.Cases
                     , MemoryBench.LLVM
                     , Paths_telomare
  build-depends:       base, telomare, deepseq, strict, weigh, parsec, mtl
                     , containers, bytestring ,llvm-hs-pure, llvm-hs

source-repository head
  type:     git
  location: https://github.com/Stand-In-Language/stand-in-language
