name:                telomare
version:             0.1.0.0
synopsis:            A simple but robust virtual machine
description:         Please see README.md
homepage:            https://github.com/Stand-In-Language/stand-in-language#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Sam Griffin
maintainer:          sam.griffin@gmail.com
copyright:           2020 Sam Griffin
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10
extra-libraries:     chez
                     
data-files:          bench/MemoryBench/cases
                   , Prelude.tel
                   , tictactoe.tel
                   , examples.tel

library
  hs-source-dirs:      src
  other-extensions:    GADTs
                     , EmptyDataDecls
                     , DeriveFunctor
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , OverloadedStrings
                     , RecursiveDo
                     , LambdaCase
  exposed-modules:     Naturals
                     , PrettyPrint
                     , Telomare
                     , Telomare.Eval
                     , Telomare.Decompiler
                     , Telomare.Optimizer
                     , Telomare.Parser
                     , Telomare.Possible
                     , Telomare.Resolver
                     , Telomare.RunTime
                     , Telomare.TypeChecker
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , dlist
                     , recursion-schemes
                     , clock
                     , containers
                     , mtl
                     , vector
                     , deepseq
                     , derive-storable
                     , bytestring
                     , text
                     , transformers
                     , megaparsec
                     , memory
                     , strict
                     , tasty
                     , tasty-hunit
                     , deriving-compat
                     , lens
                     , hspec
                     , QuickCheck
                     , cryptonite
                     , bytestring
                     , crypto-api
                     , utf8-string
                     , process
  -- uncomment this line to get a cabal repl. Use appropiate complete path (will error with a relative path).
  -- extra-lib-dirs:      /home/hhefesto/src/telomare/lib

  default-language:    Haskell2010
  ghc-options:         -ddump-to-file -ddump-splices

executable telomare
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , telomare
                     , strict
                     , optparse-applicative
  default-language:    Haskell2010

executable telomare-repl
  hs-source-dirs:      app
  main-is:             Repl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , telomare
                     , haskeline
                     , strict
                     , optparse-applicative
                     , megaparsec
                     , mtl
  default-language:    Haskell2010

test-suite telomare-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
  build-depends:       base
                     , containers
                     , dlist
                     , hspec
                     , hspec-core
                     , mtl
                     , telomare
                     , strict
                     , QuickCheck
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ParserTests.hs
  other-modules:       Common
  build-depends:       base
                     , telomare
                     , strict
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , containers
                     , megaparsec
                     , mtl
                     , recursion-schemes
                     , process
                     , lens
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite telomare-resolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ResolverTests.hs
  other-modules:       Common
                     , CaseTests
  build-depends:       base
                     , telomare
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , containers
                     , QuickCheck
                     , strict
                     , megaparsec
                     , unix
                     , mtl
                     , Diff
                     , pretty-show
                     , recursion-schemes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark telomare-serializer-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             SerializerBench.hs
  build-depends:       base, telomare, deepseq, strict, vector, criterion
  ghc-options:         -with-rtsopts=-T

benchmark telomare-memory-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  Main-is:             MemoryBench.hs
  other-modules:       MemoryBench.Cases
                     -- , MemoryBench.LLVM
                     , Paths_telomare
  build-depends:       base
                     , telomare
                     , deepseq
                     , strict
                     , weigh
                     , parsec
                     , mtl
                     , containers
                     , bytestring
                     -- , llvm-hs-pure
                     -- , llvm-hs

source-repository head
  type:     git
  location: https://github.com/Stand-In-Language/stand-in-language
